<resources>
    <string name="app_name">Bajra</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="annotate">Annotate</string>
    <string name="measure">Measure</string>
    <string name="distance">Distance</string>
    <string name="ellipse">Ellipse</string>
    <string name="clear_all">Clear All</string>
    <string name="bajra_technology">Bajra Technology</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="invalid_email">Invalid email entered</string>
    <string name="invalid_password">Your password must be at least 8 characters</string>
    <string name="enter_comment_here">Enter comment here</string>
</resources>